--- a/FreeAIr/UI/ToolWindows/ChatListToolWindowControl.xaml
+++ b/FreeAIr/UI/ToolWindows/ChatListToolWindowControl.xaml
@@ -76,40 +76,26 @@
                     x:Name="ForegroundButton"
                     />
 
-                <Label
-                    Margin="0,2,5,2"
+                <Button
+                    Margin="5,2,5,2"
                     Content="{x:Static resources:Resources.UI_StartDiscussion}"
                     HorizontalAlignment="Right"
                     VerticalAlignment="Center"
                     Background="Transparent"
-                    Foreground="#569CD6"
-                    Cursor="Hand"
                     FontFamily="Cascadia Code"
-                    >
-                    <Label.InputBindings>
-                        <MouseBinding
-                            Command="{Binding ElementName=ChatListToolWindow, Path=DataContext.StartChatCommand}"
-                            MouseAction="LeftClick"
-                            />
-                    </Label.InputBindings>
-                </Label>
+                    Command="{Binding ElementName=ChatListToolWindow, Path=DataContext.StartChatCommand}"
+                    Style="{DynamicResource TextBlockLikeButtonStyle}"
+                    />
 
-                <Label
+                <Button
                     Margin="5,2,5,2"
                     Content="{x:Static resources:Resources.UI_RemoveChat}"
                     VerticalAlignment="Center"
                     Background="Transparent"
-                    Foreground="#569CD6"
-                    Cursor="Hand"
                     FontFamily="Cascadia Code"
-                    >
-                    <Label.InputBindings>
-                        <MouseBinding
-                            Command="{Binding ElementName=ChatListToolWindow, Path=DataContext.RemoveCommand}"
-                            MouseAction="LeftClick"
-                            />
-                    </Label.InputBindings>
-                </Label>
+                    Command="{Binding ElementName=ChatListToolWindow, Path=DataContext.RemoveCommand}"
+                    Style="{DynamicResource TextBlockLikeButtonStyle}"
+                    />
 
             </StackPanel>
 
@@ -120,23 +106,16 @@
                 VerticalAlignment="Center"
                 >
 
-                <Label
+                <Button
                     Margin="5,2,0,2"
                     Content="Edit tools..."
                     HorizontalAlignment="Right"
                     VerticalAlignment="Center"
-                    Foreground="#569CD6"
-                    Cursor="Hand"
                     FontFamily="Cascadia Code"
                     ToolTip="Edit available model context protocol tools"
-                    >
-                    <Label.InputBindings>
-                        <MouseBinding
-                            Command="{Binding ElementName=ChatListToolWindow, Path=DataContext.EditAvailableToolsCommand}"
-                            MouseAction="LeftClick"
-                            />
-                    </Label.InputBindings>
-                </Label>
+                    Command="{Binding ElementName=ChatListToolWindow, Path=DataContext.EditAvailableToolsCommand}"
+                    Style="{DynamicResource TextBlockLikeButtonStyle}"
+                    />
 
             </StackPanel>
             
@@ -192,40 +171,26 @@
                                 <ColumnDefinition />
                             </Grid.ColumnDefinitions>
 
-                            <TextBlock
+                            <Button
                                 Grid.Column="0"
                                 Margin="0,0,2,0"
-                                Text="{x:Static resources:Resources.UI_OpenInEditor}"
+                                Content="{x:Static resources:Resources.UI_OpenInEditor}"
                                 HorizontalAlignment="Left"
-                                Background="Transparent"
-                                Foreground="#569CD6"
-                                Cursor="Hand"
-                                >
-                                <TextBlock.InputBindings>
-                                    <MouseBinding
-                                        Command="{Binding ElementName=ChatListToolWindow, Path=DataContext.OpenInEditorCommand}"
-                                        CommandParameter="{Binding}"
-                                        MouseAction="LeftClick"
-                                        />
-                                </TextBlock.InputBindings>
-                            </TextBlock>
-                            <TextBlock
+                                Command="{Binding ElementName=ChatListToolWindow, Path=DataContext.OpenInEditorCommand}"
+                                CommandParameter="{Binding}"
+                                Style="{DynamicResource TextBlockLikeButtonStyle}"
+                                />
+
+                            <Button
                                 Grid.Column="1"
                                 Margin="2,0,0,0"
-                                Text="{x:Static resources:Resources.UI_StopWaiting}"
+                                Content="{x:Static resources:Resources.UI_StopWaiting}"
                                 HorizontalAlignment="Right"
-                                Background="Transparent"
-                                Foreground="#569CD6"
-                                Cursor="Hand"
-                                >
-                                <TextBlock.InputBindings>
-                                    <MouseBinding
-                                        Command="{Binding ElementName=ChatListToolWindow, Path=DataContext.StopCommand}"
-                                        CommandParameter="{Binding}"
-                                        MouseAction="LeftClick"
-                                        />
-                                </TextBlock.InputBindings>
-                            </TextBlock>
+                                Command="{Binding ElementName=ChatListToolWindow, Path=DataContext.StopCommand}"
+                                CommandParameter="{Binding}"
+                                Style="{DynamicResource TextBlockLikeButtonStyle}"
+                                />
+
                         </Grid>
 
                     </StackPanel>
@@ -287,41 +252,28 @@
                         <StackPanel
                             Orientation="Horizontal"
                             HorizontalAlignment="Right"
-                            VerticalAlignment="Bottom"
+                            VerticalAlignment="Stretch"
                             >
 
-                            <Label
+                            <Button
                                 Margin="5,0,5,0"
                                 Content="Add custom file..."
-                                Foreground="#569CD6"
-                                Cursor="Hand"
                                 FontFamily="Cascadia Code"
+                                VerticalAlignment="Center"
                                 ToolTip="Add custom file to chat context"
-                                >
-                                <Label.InputBindings>
-                                    <MouseBinding
-                                        Command="{Binding ElementName=ChatListToolWindow, Path=DataContext.AddCustomFileToContextCommand}"
-                                        MouseAction="LeftClick"
-                                        />
-                                </Label.InputBindings>
-                            </Label>
+                                Command="{Binding ElementName=ChatListToolWindow, Path=DataContext.AddCustomFileToContextCommand}"
+                                Style="{DynamicResource TextBlockLikeButtonStyle}"
+                                />
 
-                            <Label
+                            <Button
                                 Margin="5,0,5,0"
                                 Content="Remove all automatic found items"
-                                Cursor="Hand"
-                                Foreground="#569CD6"
                                 FontFamily="Cascadia Code"
+                                VerticalAlignment="Center"
                                 ToolTip="Remove all automatic found items from chat context"
-                                >
-                                <Label.InputBindings>
-                                    <MouseBinding
-                                        Command="{Binding ElementName=ChatListToolWindow, Path=DataContext.RemoveAllAutomaticItemsFromContextCommand}"
-                                        MouseAction="LeftClick"
-                                        />
-                                </Label.InputBindings>
-                            </Label>
-
+                                Command="{Binding ElementName=ChatListToolWindow, Path=DataContext.RemoveAllAutomaticItemsFromContextCommand}"
+                                Style="{DynamicResource TextBlockLikeButtonStyle}"
+                                />
 
                         </StackPanel>
                     </Grid>
@@ -384,25 +336,19 @@
                                             Moniker="{Binding Moniker}"
                                             ToolTip="{Binding Tooltip}"
                                             />
-                                        <Label
+                                        <Button
                                             Grid.Column="3"
-                                            Margin="0,0,0,0"
+                                            Margin="5,0,0,0"
                                             Content="{Binding ChatContextDescription}"
                                             HorizontalAlignment="Left"
                                             HorizontalContentAlignment="Left"
-                                            Foreground="#569CD6"
-                                            Cursor="Hand"
                                             FontFamily="Cascadia Code"
                                             ToolTip="Open item in new window"
-                                            >
-                                            <Label.InputBindings>
-                                                <MouseBinding
-                                                    Command="{Binding ElementName=ChatListToolWindow, Path=DataContext.OpenContextItemCommand}"
-                                                    CommandParameter="{Binding .}"
-                                                    MouseAction="LeftClick"
-                                                    />
-                                            </Label.InputBindings>
-                                        </Label>
+                                            Command="{Binding ElementName=ChatListToolWindow, Path=DataContext.OpenContextItemCommand}"
+                                            CommandParameter="{Binding .}"
+                                            Style="{DynamicResource TextBlockLikeButtonStyle}"
+                                            />
+
                                     </Grid>
                                 </DataTemplate>
                             </ItemsControl.ItemTemplate>
@@ -607,35 +553,27 @@
                                                                 </ContextMenu.Template>
                                                                 <ContextMenu.ItemTemplate>
                                                                     <DataTemplate>
-                                                                        <Label
+                                                                        <Button
                                                                             x:Name="ChatContextItem"
                                                                             Content="{Binding Path=ChatContextDescription}"
-                                                                            Foreground="#569CD6"
-                                                                            Background="Transparent"
                                                                             HorizontalAlignment="Stretch"
                                                                             HorizontalContentAlignment="Stretch"
                                                                             VerticalAlignment="Stretch"
-                                                                            Cursor="Hand"
+                                                                            Command="{Binding Source={StaticResource DataContextProxy}, Path=Data.UpdateContextItemCommand}"
+                                                                            Style="{DynamicResource TextBlockLikeButtonStyle}"
                                                                             >
-                                                                            <Label.InputBindings>
-                                                                                <MouseBinding
-                                                                                    Command="{Binding Source={StaticResource DataContextProxy}, Path=Data.UpdateContextItemCommand}"
-                                                                                    MouseAction="LeftClick"
-                                                                                    >
-                                                                                    <MouseBinding.CommandParameter>
-                                                                                        <MultiBinding Converter="{StaticResource CombinedParameterConverter}">
-                                                                                            <!-- 1. Текущий элемент (ChatContextItem) -->
-                                                                                            <Binding />
+                                                                            <Button.CommandParameter>
+                                                                                <MultiBinding Converter="{StaticResource CombinedParameterConverter}">
+                                                                                    <!-- 1. Текущий элемент (ChatContextItem) -->
+                                                                                    <Binding />
 
-                                                                                            <!-- 2. TextArea из TextEditor -->
-                                                                                            <Binding 
-                                                                                                RelativeSource="{RelativeSource AncestorType={x:Type avalonEdit:TextEditor}}" 
-                                                                                                Path="TextArea" />
-                                                                                        </MultiBinding>
-                                                                                    </MouseBinding.CommandParameter>
-                                                                                </MouseBinding>
-                                                                            </Label.InputBindings>
-                                                                        </Label>
+                                                                                    <!-- 2. TextArea из TextEditor -->
+                                                                                    <Binding 
+                                                                                        RelativeSource="{RelativeSource AncestorType={x:Type avalonEdit:TextEditor}}" 
+                                                                                        Path="TextArea" />
+                                                                                </MultiBinding>
+                                                                            </Button.CommandParameter>
+                                                                        </Button>
                                                                     </DataTemplate>
                                                                 </ContextMenu.ItemTemplate>
                                                             </ContextMenu>
@@ -823,26 +761,18 @@
                 >
             </embedillo:EmbedilloControl>
 
-            <Label
+            <Button
                 Grid.Row="3"
                 Margin="5,2,5,2"
                 Content="{x:Static resources:Resources.UI_StopWaiting}"
                 HorizontalAlignment="Right"
                 VerticalAlignment="Bottom"
-                Background="Transparent"
-                Foreground="#569CD6"
-                Cursor="Hand"
                 FontFamily="Cascadia Code"
                 Visibility="{Binding ElementName=ChatListToolWindow, Path=DataContext.IsReadyToAcceptNewPrompt, Converter={StaticResource StopCommandVisibilityConverter}}"
-                >
-                <Label.InputBindings>
-                    <MouseBinding
-                        Command="{Binding ElementName=ChatListToolWindow, Path=DataContext.StopCommand}"
-                        CommandParameter="{Binding ElementName=ChatListToolWindow, Path=DataContext.SelectedChat}"
-                        MouseAction="LeftClick"
-                        />
-                </Label.InputBindings>
-            </Label>
+                Command="{Binding ElementName=ChatListToolWindow, Path=DataContext.StopCommand}"
+                CommandParameter="{Binding ElementName=ChatListToolWindow, Path=DataContext.SelectedChat}"
+                Style="{DynamicResource TextBlockLikeButtonStyle}"
+                />
 
         </Grid>
 
