--- a/FreeAIr/UI/ToolWindows/NaturalLanguageResultsToolWindowControl.xaml
+++ b/FreeAIr/UI/ToolWindows/NaturalLanguageResultsToolWindowControl.xaml
@@ -51,24 +51,16 @@
                 Content="Cancel chat"
                 toolkit:Themes.UseVsTheme="True"
                 />
-            <Label
+            <Button
                 Grid.Column="1"
                 HorizontalAlignment="Right"
                 Margin="5,0,5,0"
                 Content="Cancel chat"
                 VerticalAlignment="Center"
-                Background="Transparent"
-                Foreground="#569CD6"
-                Cursor="Hand"
-                >
-                <Label.InputBindings>
-                    <MouseBinding
-                        Command="{Binding ElementName=NaturaLanguageResultsName, Path=DataContext.CancelChatCommand}"
-                        CommandParameter="{Binding}"
-                        MouseAction="LeftClick"
-                        />
-                </Label.InputBindings>
-            </Label>
+                Command="{Binding ElementName=NaturaLanguageResultsName, Path=DataContext.CancelChatCommand}"
+                CommandParameter="{Binding}"
+                Style="{DynamicResource TextBlockLikeButtonStyle}"
+                />
 
         </Grid>
         
